# LinjokGaming

./: .gitignore  CMakeLists.txt  Doxgen.conf  README.md  main.cpp
games/: CMakeLists.txt  games.cpp  games.h
games/mario/: CMakeLists.txt  mario.cpp  mario.h
include/: configure.h  configure.h.in  menu.h
install/: configure
src/: menu.cpp
